--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,5 @@ __pycache__
 
 
 .References/*
-.OETB - Tabuk Prince Sultan/Objects/geotiffs/*
+.OETB-Tabuk-Prince-Sultan/Objects/geotiffs/*
 _PackageInt/*
